fix(ffe-core): use overflow-wrap:anywhere with word-break:normal

--- a/packages/ffe-core/less/typography.less
+++ b/packages/ffe-core/less/typography.less
@@ -197,8 +197,7 @@
     margin-bottom: @ffe-spacing-xs;
     margin-top: 0;
     text-wrap: balance;
-    word-break: break-all;
-    hyphens: auto;
+    overflow-wrap: anywhere;
 
     &--error {
         color: var(--ffe-g-error-color);
@@ -475,6 +474,5 @@
 .ffe-pre-text,
 .ffe-small-text,
 .ffe-micro-text {
-    word-break: break-all;
-    hyphens: auto;
+    overflow-wrap: anywhere;
 }
